@@ -15,8 +15,10 @@ emc2 (1:2.2.4~cvs) unstable; urgency=low
   * axis: fix the numeric keypad with numlock on
   * task: fix the initial coordinate system offset (SF#1895693)
   * stepconf: fix "Both Limit"-type inputs (SF#1906640)
+  * stepconf: fix "HOME_SEQUENCE" problem without full set of home inputs
+    (SF#1906641)
 
- -- Jeff Epler <jepler@unpy.net>  Mon, 03 Mar 2008 20:47:28 -0600
+ -- Jeff Epler <jepler@unpy.net>  Mon, 03 Mar 2008 21:10:28 -0600
 
 emc2 (1:2.2.3) unstable; urgency=low
 
